src/components/sections/Roadmap/style.module.scss
@import "~assets/styles/media";

.container {
  overflow-x: hidden;

  @media screen and (min-width: $desktop) {
    overflow-x: hidden;
    margin-top: 150px;
  }
}

.wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
}

.title {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  width: 700px;
  font-size: 64px;
  line-height: 120%;
  letter-spacing: 0.03em;
  text-align: right;
  margin-right: 28px;
}

.wrapperContentTitleLeftSide {
  width: 100%;
  align-items: self-end;
}

.paragraph {
  display: flex;
  flex-wrap: wrap;
  align-items: flex-start;
  height: fit-content;

  width: 40%;
  margin-left: 28px;
  font-size: 16px;
  color: #C1C0C0;

  @media screen and (max-width: $desktop) {
    margin-top: 10px;
    text-align: justify;
  }
}

.paragraphWrapper {
  width: 100%;
}

.table {
  display: grid;
  z-index: 5;
  position: relative;
  grid-template-columns: repeat(4, 1fr);
  background-image: url("../../../assets/images/running-background.png");
  background-color: rgba(32, 33, 35, 0.7);
  border-right: 1px solid #5A5A6B;
  border-bottom: 1px solid #5A5A6B;
  margin: 90px 130px 180px 130px;
}

.playGameOn {
  font-weight: 400;
  font-size: 15px;
  line-height: 20px;
  letter-spacing: 0.03em;
  color: #FFFFFF;
}

.header {
  height: 40px;
  background: #1a1a1c;
  border-bottom: 1px solid #5A5A6B;
  border-top: 1px solid #5A5A6B;
}

.appColumn {
  border-left: 1px solid #5A5A6B;
}

.appContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding-top: 50px;
}

.appBtnContainer {
  display: flex;
  flex-direction: column;
  margin-top: 8px;
}

.appBtn {
  font-family: "Roboto", sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 180px;
  padding: 10px 0;
  margin-top: 16px;
  background: rgba(0, 0, 0, 0.5);
  border: 0.74569px solid #FFFFFF;
}

.appText {
  font-size: 16px;
  margin-left: 15px;
  line-height: 19px;
  letter-spacing: 0.03em;
  color: #FFFFFF;
}



@media screen and (max-width: $desktop) {
  .wrapperContentTitleLeftSide {
    flex-direction: row;
  }

  .wrapper {
    padding: 37px 20px;
    grid-template-columns: 1fr;
  }

  .title {
    padding: 0 20px;
    justify-content: flex-start;
    text-transform: initial;
    font-size: 36px;
  }

  .paragraph {
    width: 100%;
    margin-left: 0;
  }
  .greenText {
    text-transform: initial;
  }
}

